# cmdEngine

./: CMakeLists.txt
.quail/: quail.txt
dependencies/: CMakeLists.txt
project/: CMakeLists.txt  TODO.md
project/inc/: baseTypes.hpp  console.hpp  debug.hpp  resource.h
project/inc/asset/: manager.hpp
project/inc/audio/: audio.hpp  io.hpp  manager.hpp
project/src/: win_main.cpp
